--- a/src/assets/scss/_utilities.scss
+++ b/src/assets/scss/_utilities.scss
@@ -253,6 +253,19 @@
     margin-left: 12.5rem;
 }
 
+// margin-left minus
+.ml--16 {
+    margin-left: -16px;
+}
+
+.ml--28 {
+    margin-left: -28px;
+}
+
+.ml--30 {
+    margin-left: -30px;
+}
+
 // margin right
 // incresing:5px
 .mr-a-1 {
@@ -1317,6 +1330,10 @@
 
 .f-s-26 {
     font-size: 26px;
+}
+
+.f-s-28 {
+    font-size: 28px;
 }
 
 // ********color*********//
